force-app/main/default/objects/Blocks__c/Blocks__c.object-meta.xml
<CustomObject>
    <label>Block</label>
    <nameField>
        <displayFormat>BL-{00000}</displayFormat>
        <label>Block Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>