force-app/main/default/objects/Blocks__c/fields/Block_Id__c.field-meta.xml
<CustomField>
    <fullName>Block_Id__c</fullName>
    <label>Block Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>