force-app/main/default/objects/Blocks__c/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <formula>Floor__r.Building__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Name</label>
    <type>Text</type>
</CustomField>