force-app/main/default/objects/Blocks__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Floor</label>
    <referenceTo>Floors__c</referenceTo>
    <relationshipLabel>Blocks</relationshipLabel>
    <relationshipName>Blocks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>