force-app/main/default/objects/Blocks__c/fields/Floor_Name__c.field-meta.xml
<CustomField>
    <fullName>Floor_Name__c</fullName>
    <formula>Floor__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Name</label>
    <type>Text</type>
</CustomField>