force-app/main/default/objects/Blocks__c/fields/Window__c.field-meta.xml
<CustomField>
    <fullName>Window__c</fullName>
    <label>Window</label>
    <length>50</length>
    <type>Text</type>
</CustomField>