force-app/main/default/objects/Blocks__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Block_Id__c</columns>
    <columns>Floor_Name__c</columns>
    <columns>Building_Name__c</columns>
    <columns>Window__c</columns>
    <columns>Meeting_Room__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>